승권 / 썸머노트 css오류 수정 + 글 작성 후 해당 글로 redirect

--- a/src/main/webapp/resources/cambak21/css/bbskCSS.css
+++ b/src/main/webapp/resources/cambak21/css/bbskCSS.css
@@ -17,6 +17,10 @@ p.category-title {
 	width: 83%
 }
 
+th.board-title {
+    width: 65%;
+}
+
 .pageBtn {
 	display: flex;
     justify-content: center;
@@ -73,12 +77,12 @@ p.category-title {
 	font-weight: bold;
 }
 
-.detail-top-author p:first-child {
+.detail-top-author > p:first-child {
 	padding-left: 15px;
 	width: 70%;
 }
 
-.detail-top-author p:nth-child(2), p:nth-child(3), p:nth-child(4) {
+.detail-top-author > .view, .like, .reply {
 	width: 10%;
 	text-align: center;
 }
