승권 / 이전글, 다음글 완료

--- a/src/main/webapp/resources/cambak21/css/bbskCSS.css
+++ b/src/main/webapp/resources/cambak21/css/bbskCSS.css
@@ -144,3 +144,8 @@ button.btn.btn-success {
 	margin-top: 10px;
     float: right;
 }
+
+.prevNextBtns {
+    display: flex;
+    justify-content: space-between;
+}
