승권 / 페이징 + 검색결과 페이징 + css 수정

--- a/src/main/webapp/resources/cambak21/css/bbskCSS.css
+++ b/src/main/webapp/resources/cambak21/css/bbskCSS.css
@@ -26,6 +26,14 @@ th.board-title {
     justify-content: center;
 }
 
+.searchType {
+	height: 35px;
+}
+
+.research {
+    display: flex;
+}
+
 /* ====================================================게시글 상세페이지 ========================================================*/
 .detail-wrap {
 	margin-top: 5%;
@@ -149,3 +157,8 @@ button.btn.btn-success {
     display: flex;
     justify-content: space-between;
 }
+
+button.btn.btn-danger.write {
+    float: right;
+}
+
