--- a/src/main/webapp/resources/cambak21/css/myPageTemplet.css
+++ b/src/main/webapp/resources/cambak21/css/myPageTemplet.css
@@ -105,7 +105,7 @@ img.gradeImg {
 }
 
 .main-content {
-	height: 500px;
+/* 	height: 500px; */
 	margin-top: 20px;
 }
 
@@ -123,4 +123,8 @@ img.gradeImg {
 
 #content {
 	font-family: 'Nanum Gothic', sans-serif;
+}
+
+.mini-category {
+	cursor: pointer;
 }
