종진 /  컨트롤러 테스트 코드 삭제 , 배송지 목록 추가, 삭제, 수정 추가버튼 등 완료 캠박몰 메인 CSS 수정,  컨트롤러 변경에 따라 header, footer 이미지 경로 모두 수정  /mall/main/* 추가

--- a/src/main/webapp/resources/mallMain/css/style.css
+++ b/src/main/webapp/resources/mallMain/css/style.css
@@ -172,7 +172,7 @@ ol {
 	font-size: 14px;
 	color: #ffffff;
 	background: #ca1515;
-	font-weight: 600;
+	font-weight: bold;
 	border: none;
 	text-transform: uppercase;
 	display: inline-block;
@@ -400,7 +400,7 @@ ol {
 	font-size: 15px;
 	text-transform: uppercase;
 	color: #111111;
-	font-weight: 500;
+	font-weight: bold;
 	display: block;
 	padding: 2px 0;
 	position: relative;
@@ -464,7 +464,6 @@ ol {
 	display: inline-block;
 	font-size: 18px;
 	color: #111111;
-	margin-right: 20px;
 	cursor: pointer;
 }
 
