서효원 / 캠박이일 메인페이지 링크 추가

--- a/src/main/webapp/resources/cambak21/css/effectV5.css
+++ b/src/main/webapp/resources/cambak21/css/effectV5.css
@@ -114,7 +114,7 @@ h4 {
     margin: 0 0 35%;
 }
 
-.carousel-search h1 {
+.carousel-search h1, p {
   text-align: center;
   font-size: 1vw;
   color: white;
