--- a/src/main/webapp/resources/cambak21/css/effectV5.css
+++ b/src/main/webapp/resources/cambak21/css/effectV5.css
@@ -70,7 +70,7 @@ h4 {
 .carousel .themaBtn a {
     font-size: 1.5vw;
     color: white;
-    text-decoration: 2px underline white;
+    text-decoration-line: none;
 }
 
 .carousel-search form #search-res ul {
