서효원 / 캠박이일 마이페이지 내가 작성한 댓글 오류 수정, 캠박이일 캠핑팁 게시판 게시글 작성 파일 추가 기능 완료

--- a/src/main/webapp/resources/cambak21/css/bbskCSS.css
+++ b/src/main/webapp/resources/cambak21/css/bbskCSS.css
@@ -158,3 +158,10 @@ button.btn.btn-danger.write {
     float: right;
 }
 
+.nowSideBar {
+	color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    font-weight: 500;
+    border-radius: 5px;
+}
