종진 / 몰 메인 폰트 변경

--- a/src/main/webapp/resources/mallMain/css/style.css
+++ b/src/main/webapp/resources/mallMain/css/style.css
@@ -1063,7 +1063,7 @@ ol {
 }
 
 .categories__text h1 {
-	font-family: "Cookie", cursive;
+/* 	font-family: "Cookie", cursive; */
 	color: #111111;
 	margin-bottom: 5px;
 }
