서효원 / 관리자 페이지 주문 관리 jsp 파일 생성

--- a/src/main/webapp/resources/cambak21/css/SHWtamplet.css
+++ b/src/main/webapp/resources/cambak21/css/SHWtamplet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 #logo h1 {
   display: block;
   text-decoration: none;
@@ -25,4 +27,74 @@ a.top {
 .topMove {
   width: 40px;
   height: 40px;
+}
+
+#tampletHeaderTitle {
+	font-size: 19px;
+	font-weight: bold;
+	font-family: 'Pacifico', cursive;
+}
+
+.tampletHeaderBar {
+	float: left;
+	width: 1px;
+	height: 15px;
+	margin: 18px 9px 0 -3px;
+	background-color: #dcdcdc;
+}
+
+footer a:hover {
+  color: #777;
+  text-decoration: none;
+}
+
+footer a {
+  color: #000;
+}
+
+footer p {
+  margin: 0 0 10px;
+}
+
+#footerSide {
+	padding-top: 60px;
+	background-color: #fafbfc;
+	color: #000;
+	position: absolute;
+	width: 100%;
+	padding: 10px;
+	z-index: 9999;
+	border-top: 1px solid #dedede;
+	margin-top: 0;
+}
+
+#footerTitle {
+	font-weight: bold;
+	color: #3A4636;
+	font-size: 23px;
+	font-family: inherit;
+	margin: 10px 0 30px 0;
+	letter-spacing: 10px;
+}
+
+#footerBottom {
+	margin-right: -15px;
+	margin-left: -15px;
+	font-family: 'Lato', sans-serif;
+}
+
+#footerSubheading {
+	font-size: 16px;
+	position: relative;
+	min-height: 1px;
+	padding-right: 15px;
+	padding-left: 15px;
+}
+
+#footerContent {
+	font-size: 15px;
+	border-top: 1px solid #dedede;
+	padding-top: 10px;
+	border-right-width: 15px;
+	padding: 10px 15px;
 }
